Trinity scss-mob-table

--- a/assets/style/Base.css
+++ b/assets/style/Base.css
@@ -33,6 +33,7 @@
   max-height: 100%;
   z-index: -1;
   overflow: hidden;
+  box-shadow: 0px -6px 9px 0px white, 0px 6px 9px rgba(0, 0, 0, 0.4);
 }
 
 .header__nav {
@@ -67,11 +68,11 @@
 /* Style label tag */
 .header__hamb-line {
   background: #324665;
-  border-radius: 0.1875rem;
+  border-radius: 50%;
   display: block;
-  height: 2px;
+  height: 4px;
   position: relative;
-  width: 24px;
+  width: 44px;
 }
 
 /* Style span tag */
@@ -88,11 +89,11 @@
 }
 
 .header__hamb-line::before {
-  top: 5px;
+  top: 14px;
 }
 
 .header__hamb-line::after {
-  top: -5px;
+  top: -14px;
 }
 
 .header__side-menu {
@@ -380,6 +381,7 @@ a {
   max-height: 100%;
   z-index: -1;
   overflow: hidden;
+  box-shadow: 0px -6px 9px 0px white, 0px 6px 9px rgba(0, 0, 0, 0.4);
 }
 
 .header__nav {
@@ -414,11 +416,11 @@ a {
 /* Style label tag */
 .header__hamb-line {
   background: #324665;
-  border-radius: 0.1875rem;
+  border-radius: 50%;
   display: block;
-  height: 2px;
+  height: 4px;
   position: relative;
-  width: 24px;
+  width: 44px;
 }
 
 /* Style span tag */
@@ -435,11 +437,11 @@ a {
 }
 
 .header__hamb-line::before {
-  top: 5px;
+  top: 14px;
 }
 
 .header__hamb-line::after {
-  top: -5px;
+  top: -14px;
 }
 
 .header__side-menu {
@@ -1089,6 +1091,7 @@ input[type=radio] {
     -webkit-overflow-scrolling: touch;
     height: 380px;
     scroll-padding-left: 6px;
+    scroll-padding-right: 6px;
   }
   .partners-slider__shadow {
     width: 233px;
