--- a/assets/style/Elements/header.scss
+++ b/assets/style/Elements/header.scss
@@ -154,7 +154,7 @@ $maxWidth: 1440;
     max-height: 100%;
     z-index: -1;
     overflow: hidden;
-    box-shadow: 0px -6px 9px 0px white, 0px 6px 9px rgba(0, 0, 0, 0.4);
+    box-shadow: inset 0px -6px 9px 0px white, 0px 6px 9px rgba(0, 0, 0, 0.4);
   }
   .header__nav {
     max-height: 0;
@@ -187,7 +187,7 @@ $maxWidth: 1440;
   
   .header__hamb-line {
     background: $text;
-    border-radius: 50%;
+    border-radius: 0.1875rem;
     display: block;
     height: 4px;
     position: relative;
@@ -233,7 +233,6 @@ $maxWidth: 1440;
     width: 85vw;
     max-height: 100%;
     z-index: -1;
-    box-shadow: 0px -6px 9px 0px white, 0px 6px 9px rgba(0, 0, 0, 0.4);
   }
   
   .header__side-menu:checked ~ .header__hamb .header__hamb-line {
