--- a/assets/style/Elements/header.scss
+++ b/assets/style/Elements/header.scss
@@ -158,6 +158,7 @@ $maxWidth: 1440;
     max-height: 0;
     top: 4%;
     transition: max-height 0.5s ease-out;
+    box-shadow: 0px -6px 9px 0px white, 0px 6px 9px rgba(0, 0, 0, 0.4);
   }
   .header__list {
     height: 300px;
@@ -230,7 +231,7 @@ $maxWidth: 1440;
     width: 85vw;
     max-height: 100%;
     z-index: -1;
-    box-shadow: inset 0px -6px 9px 0px white, 0px 6px 9px rgba(0, 0, 0, 0.4);
+    box-shadow: 0px -6px 9px 0px white, 0px 6px 9px rgba(0, 0, 0, 0.4);
   }
   
   .header__side-menu:checked ~ .header__hamb .header__hamb-line {
