--- a/assets/style/Base.css
+++ b/assets/style/Base.css
@@ -32,13 +32,13 @@
   max-height: 100%;
   z-index: -1;
   overflow: hidden;
+  box-shadow: 0px -6px 9px 0px white, 0px 6px 9px rgba(0, 0, 0, 0.4);
 }
 
 .header__nav {
   max-height: 0;
   top: 4%;
   transition: max-height 0.5s ease-out;
-  box-shadow: 0px -6px 9px 0px white, 0px 6px 9px rgba(0, 0, 0, 0.4);
 }
 
 .header__list {
@@ -104,6 +104,7 @@
 .header__side-menu:checked ~ .header__nav {
   top: 4%;
   display: flex;
+  background: #f5f4f4;
   justify-content: center;
   border-radius: 30px;
   left: auto;
@@ -378,13 +379,13 @@ a {
   max-height: 100%;
   z-index: -1;
   overflow: hidden;
+  box-shadow: 0px -6px 9px 0px white, 0px 6px 9px rgba(0, 0, 0, 0.4);
 }
 
 .header__nav {
   max-height: 0;
   top: 4%;
   transition: max-height 0.5s ease-out;
-  box-shadow: 0px -6px 9px 0px white, 0px 6px 9px rgba(0, 0, 0, 0.4);
 }
 
 .header__list {
@@ -450,6 +451,7 @@ a {
 .header__side-menu:checked ~ .header__nav {
   top: 4%;
   display: flex;
+  background: #f5f4f4;
   justify-content: center;
   border-radius: 30px;
   left: auto;
