--- a/assets/style/Elements/header.scss
+++ b/assets/style/Elements/header.scss
@@ -153,12 +153,12 @@ $maxWidth: 1440;
     max-height: 100%;
     z-index: -1;
     overflow: hidden;
+    box-shadow: 0px -6px 9px 0px white, 0px 6px 9px rgba(0, 0, 0, 0.4);
   }
   .header__nav {
     max-height: 0;
     top: 4%;
     transition: max-height 0.5s ease-out;
-    box-shadow: 0px -6px 9px 0px white, 0px 6px 9px rgba(0, 0, 0, 0.4);
   }
   .header__list {
     height: 300px;
@@ -225,6 +225,7 @@ $maxWidth: 1440;
   .header__side-menu:checked ~ .header__nav {
     top: 4%;
     display: flex;
+    background: #f5f4f4;
     justify-content: center;
     border-radius: 30px;
     left: auto;
