--- a/assets/style/Base.css
+++ b/assets/style/Base.css
@@ -2,7 +2,6 @@
   width: 100%;
   height: 110px;
   position: fixed;
-  z-index: 100;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -27,10 +26,11 @@
   display: flex;
   justify-content: center;
   border-radius: 30px;
+  background: #f5f4f4;
   left: auto;
   width: 85vw;
   max-height: 100%;
-  z-index: 2;
+  z-index: -1;
   overflow: hidden;
   box-shadow: 0px -6px 9px 0px white, 0px 6px 9px rgba(0, 0, 0, 0.4);
 }
@@ -349,7 +349,6 @@ a {
   width: 100%;
   height: 110px;
   position: fixed;
-  z-index: 100;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -374,10 +373,11 @@ a {
   display: flex;
   justify-content: center;
   border-radius: 30px;
+  background: #f5f4f4;
   left: auto;
   width: 85vw;
   max-height: 100%;
-  z-index: 2;
+  z-index: -1;
   overflow: hidden;
   box-shadow: 0px -6px 9px 0px white, 0px 6px 9px rgba(0, 0, 0, 0.4);
 }
