--- a/assets/style/Elements/header.scss
+++ b/assets/style/Elements/header.scss
@@ -124,7 +124,6 @@ $maxWidth: 1440;
     width: 100%;
     height: 110px;
     position: fixed;
-    z-index: 100;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -148,10 +147,11 @@ $maxWidth: 1440;
     display: flex;
     justify-content: center;
     border-radius: 30px;
+    background: #f5f4f4;
     left: auto;
     width: 85vw;
     max-height: 100%;
-    z-index: 2;
+    z-index: -1;
     overflow: hidden;
     box-shadow: 0px -6px 9px 0px white, 0px 6px 9px rgba(0, 0, 0, 0.4);
   }
