Trinity scss-mob-table

--- a/assets/style/Elements/Main/_AboutFest.scss
+++ b/assets/style/Elements/Main/_AboutFest.scss
@@ -4,6 +4,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
+  z-index: -100;
 }
 .main-festival__video-container{
   display: flex;
