--- a/assets/style/Base.css
+++ b/assets/style/Base.css
@@ -544,6 +544,7 @@ a {
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
+  z-index: -100;
 }
 
 .main-festival__video-container {
